--- a/alueclient/app/src/main/res/layout/data_test_view.xml
+++ b/alueclient/app/src/main/res/layout/data_test_view.xml
@@ -5,11 +5,49 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/data_test_image_1"
-        android:layout_width="match_parent"
-        android:layout_height="244dp"
-        app:srcCompat="@mipmap/ic_launcher" />
+
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/data_test_image_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:srcCompat="@tools:sample/avatars" />
+
+        <ImageView
+            android:id="@+id/data_test_image_1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@mipmap/ic_launcher" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/data_test_get_image_from_url"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="get Image From Url" />
+
+        <Button
+            android:id="@+id/data_test_save_image"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="SAVE IMAGE" />
+
+        <Button
+            android:id="@+id/data_test_load_image"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="load Image" />
+    </LinearLayout>
 
     <EditText
         android:id="@+id/data_test_url"
@@ -17,35 +55,40 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name" />
+        android:text="Url" />
 
-    <Button
-        android:id="@+id/data_test_get_image_from_url"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="get Image From Url" />
+        android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/data_test_save_image"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="SAVE IMAGE" />
+        <Button
+            android:id="@+id/data_test_query"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="query" />
 
-    <Button
-        android:id="@+id/data_test_load_image"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="load Image" />
+        <Button
+            android:id="@+id/date_test_insert"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Insert" />
+
+        <Button
+            android:id="@+id/data_test_Create_Database"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Create Database" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/data_test_info"
         android:layout_width="match_parent"
-        android:layout_height="36dp"
+        android:layout_height="match_parent"
         android:text="TextView" />
 
-    <ImageView
-        android:id="@+id/data_test_image_2"
-        android:layout_width="match_parent"
-        android:layout_height="226dp"
-        tools:srcCompat="@tools:sample/avatars" />
 </LinearLayout>
