--- a/alueclient/app/src/main/res/layout/my_card_view.xml
+++ b/alueclient/app/src/main/res/layout/my_card_view.xml
@@ -27,4 +27,25 @@
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/save_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="save image" />
+
+        <Button
+            android:id="@+id/set_wall_paper"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="set wallpaper" />
+
+    </LinearLayout>
 </LinearLayout>
