--- a/alueclient/app/src/main/res/layout/data_test_view.xml
+++ b/alueclient/app/src/main/res/layout/data_test_view.xml
@@ -90,4 +90,10 @@
         android:layout_height="wrap_content"
         android:text="update" />
 
+    <Button
+        android:id="@+id/data_test_finish"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="finish" />
+
 </LinearLayout>
