--- a/alueclient/app/src/main/res/layout/network_test_view.xml
+++ b/alueclient/app/src/main/res/layout/network_test_view.xml
@@ -22,4 +22,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="request" />
+
+    <Button
+        android:id="@+id/finish"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="finish" />
 </LinearLayout>
