--- a/alueclient/app/src/main/res/values/colors.xml
+++ b/alueclient/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimary">#909090</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorLight">#FFF0F0</color>
+    <color name="colorHeart">#FF6998</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorTransparent">#00000000</color>
     <color name="color30Transparent">#4D000000</color>
