--- a/alueclient/app/src/main/res/layout/about_view.xml
+++ b/alueclient/app/src/main/res/layout/about_view.xml
@@ -65,7 +65,7 @@
             android:layout_marginLeft="30dp"
             android:background="@color/colorPrimaryDark"
             android:fontFamily="sans-serif-thin"
-            android:text="请我喝一杯咖啡 ¥12"
+            android:text="请我吃一顿黄焖鸡 ¥15"
             android:textAlignment="viewStart"
             android:textColor="@color/colorWhite"
             android:textSize="20dp" />
