--- a/alueclient/app/src/main/res/layout/about_view.xml
+++ b/alueclient/app/src/main/res/layout/about_view.xml
@@ -19,7 +19,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/bigtitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
@@ -101,6 +101,7 @@
         android:layout_gravity="bottom|center"
         android:fitsSystemWindows="true">
 
+
         <LinearLayout
             android:id="@+id/fullscreen_content_controls"
 
@@ -111,6 +112,15 @@
             android:orientation="horizontal"
             tools:ignore="UselessParent">
 
+            <TextView
+                android:id="@+id/version"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-thin"
+                android:text="version"
+                android:textAlignment="center"
+                android:textColor="@color/colorLight"
+                android:textSize="20dp" />
         </LinearLayout>
     </FrameLayout>
 
