--- a/alueclient/app/src/main/res/drawable/custom_progressbar.xml
+++ b/alueclient/app/src/main/res/drawable/custom_progressbar.xml
@@ -1,30 +1,20 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <!--  设置背景色  -->
+    <item
+        android:id="@android:id/background"
+        android:drawable="@color/colorPrimaryDark"></item>
 
-    <!-- Define the background properties like color etc -->
-    <item android:id="@android:id/background">
-        <shape>
-            <gradient
-                android:startColor="#000001"
-                android:centerColor="#0b131e"
-                android:centerY="1.0"
-                android:endColor="#0d1522"
-                android:angle="270"
-                />
-        </shape>
-    </item>
-
-    <!-- Define the progress properties like start color, end color etc -->
+    <!--  设置进度条颜色  -->
     <item android:id="@android:id/progress">
         <clip>
             <shape>
                 <gradient
-                    android:startColor="#007A00"
-                    android:centerColor="#007A00"
-                    android:centerY="1.0"
-                    android:endColor="#06101d"
-                    android:angle="270"
-                    />
+                    android:endColor="#ffffff"
+                    android:startColor="#ffffff" />
             </shape>
         </clip>
     </item>
+
+
 </layer-list>
