--- a/alueclient/app/src/main/res/drawable/ic_baseline_smartphone_144px.xml
+++ b/alueclient/app/src/main/res/drawable/ic_baseline_smartphone_144px.xml
@@ -1,4 +1,5 @@
 <vector android:height="144dp" android:viewportHeight="24"
     android:viewportWidth="24" android:width="144dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FFFFFFFF" android:pathData="M17,1.01L7,1c-1.1,0 -2,0.9 -2,2v18c0,1.1 0.9,2 2,2h10c1.1,0 2,-0.9 2,-2V3c0,-1.1 -0.9,-1.99 -2,-1.99zM17,19H7V5h10v14z"/>
+    <path android:fillColor="#FFFFFFFF" android:pathData="M16.2,1L7.9,1C6.9,1 6.2,1.9 6.2,3v18c0,1.1 0.8,2 1.7,2h8.4c0.9,0 1.7,-0.9 1.7,-2V3C17.9,1.9 17.1,1 16.2,1z"/>
+    <path android:fillColor="@color/color30Transparent" android:pathData="M15.8,1.6l-7.6,0c-0.8,0 -1.5,0.9 -1.5,1.9v17.1c0,1 0.7,1.9 1.5,1.9h7.6c0.8,0 1.5,-0.9 1.5,-1.9V3.4C17.4,2.4 16.7,1.6 15.8,1.6z"/>
 </vector>
